# egui-blueprint

./: .gitignore  CHANGELOG.md  COMPLETED.md  CONTRIBUTING.md  Cargo.toml  ISSUES_REFERENCE.md  LICENSE  README.md  TODO.md  agent.md  blueprint.json  build.txt  build_error.txt  build_error_2.txt  build_output.txt  check_output.txt  error.txt  error_log.txt  settings.bak.json  settings.json  test.txt
.agent/workflows/: issue-handling.md
.github/: copilot-instructions.md
scripts/: HayDay_v0.2.json  Hayday.json  blueprint.history  blueprint.json  blueprint_test.history  blueprint_test.json  http_test.history  http_test.json  http_test_template.json  screen_test.history  screen_test.json  test_array.history  test_array.json
src/: array_guide.md  editor.rs  executor.rs  graph.rs  history.rs  main.rs  node_types.rs  settings.json
src/editor/: connection_renderer.rs  coordinate_transform.rs  mod.rs  node_ports.rs  style.rs  utils.rs
src/executor/: automation.rs  context.rs  events.rs  flow_control.rs  helpers.rs  image_matching.rs  image_recognition.rs  json_helpers.rs  mod.rs  node_eval.rs  test_drag.rs  test_drag_verification.rs  test_find_image.rs  type_conversions.rs
src/recorder/: mapper.rs  mod.rs
