[package]
name = "egui_blueprint"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
eframe = "0.33.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
log = "0.4.29"
env_logger = "0.11.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
anyhow = "1.0.100"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }


