[package]
name = "egui_blueprint"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = { version = "0.33.3", features = ["serde"] }
eframe = "0.33.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
log = "0.4.29"
env_logger = "0.11.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
anyhow = "1.0.100"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
chrono = "0.4.42"
# Desktop Input Automation (Module A)
enigo = "0.2"
# Screenshot & Image Tools (Module C)
xcap = "0.8"
# Image Recognition (Module D)
image = "0.25"
# System Monitoring (Debug Window)
sysinfo = "0.35"
# Input Recording (Module E)
# Using rustdesk-org fork which fixes macOS TSM API crash on modifier keys (Option, etc.)
# See: https://github.com/Narsil/rdev/pull/147
rdev = { git = "https://github.com/rustdesk-org/rdev", branch = "master" }
crossbeam-channel = "0.5"
rayon = "1.11.0"
# Home directory detection (for log export)
dirs = "5.0"
